# LCQP_planner_core

./: .gitignore  .gitmodules  README.md  franka_kinematic_feasibility.ttt
matlab/codegenFile/: codegenRun_pathmex.m  mcpfuncjacEval2.m
matlab/data/: dynamic_example_v2.csv  static_example_v2.csv
matlab/interface/: IController.m  IObstacle.m  IRobotModel.m  ITask.m
matlab/scene/: franka_kinematic_3Obs.ttt
matlab/scripts/: startUpFiles.m
matlab/src/: addpath_script.m  main.m  mainComparison.m  mainComparisonBatch.m  mainLCPath.m  mainLCQP.m  mainPATH.m  mainSimple.m
matlab/src/Controller/: ControllerFeasibility.m  ControllerLCPath.m  ControllerLCQP.m  ControllerSimple.m
matlab/src/Obstacle/: ObstacleSphere.m
matlab/src/RobotModel/: RobotModelFrankaBar.m  barSphereContact.m
matlab/src/Task/: TaskCHOMP.m  TaskLCPath.m  TaskLCQP.m  TaskRRT.m  runTask.m  taskCompare.m
matlab/src/helper/: FrankaKinematic.m  generateStartGoal.m  geomJ.m  mcpfuncjacEval.m  mcpfuncjacEval2.m  setGblVars.m  setGlobalVariables.m  setGlobalVariablesOnce.m
matlab/test/: testBallSphereContact.m
matlab/visualization/: collectExperiments.m  plotConfiguration.m  plotScenes.m  reportTask.m  saveFigMachineExp.m
resources/project/02exoKLhmLev0QPOiSFRfkdpb4Q/: 50bD4PYir2B0yVBRiYGHyHUcl5Ip.xml  E1xwZWRi6nF_GQYKbHdTpzsPiEYp.xml  aApSutDbJSOjdiAhDtL9LJdq0Bsp.xml  sHmGxcvSyAmbZOSLYcf3l8FKlv4p.xml
resources/project/4TozZY6hp80qPYK4wn4GSFJEp4k/: tVDn7yNtPQE0R4OZViJiGcdaIjkp.xml  tjrSwkYKwDwaEMuiVGawGyShyRcp.xml
resources/project/5uZsIxwyyO6AU_AXEFXRH26lN08/: 9DzznDsYBPwyIubSA71kVsY9oEUp.xml  m9rHfDAVFI63W_SW0MluNfpNeNMp.xml
resources/project/6-pPe29hE40WRDS0iL74G7ikwzg/: VBVUBEt65S_xe41W64gP7mqbWpUp.xml
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: -9gT2tV_z1B05Y2RVTQuQxVYJe0p.xml  -Q3Rp35CKoJdLGiOByFjHXGfikop.xml  -yRxBd8XVjxlB9xRIWptrBZR6LYd.xml  -yRxBd8XVjxlB9xRIWptrBZR6LYp.xml  0fff07FHKExRVuGElmjAiPbzZq8d.xml  0fff07FHKExRVuGElmjAiPbzZq8p.xml  10fzRQ0wux4WtLrdC40zf5CCk1Ad.xml  10fzRQ0wux4WtLrdC40zf5CCk1Ap.xml  1Ek3St4B7xc6MzmXOOaPw8vaqZgd.xml  1Ek3St4B7xc6MzmXOOaPw8vaqZgp.xml  1L5n054TTDelO_-CS96BQTi-hK0p.xml  25O2uWW6Pf8oiTrOMugsfO6ViQsp.xml  7yZ4w-P8q23w_gxFc4Qnpck8gPcd.xml  7yZ4w-P8q23w_gxFc4Qnpck8gPcp.xml  89LEWg-T16a-Yrn9ecTPePAylEkd.xml  89LEWg-T16a-Yrn9ecTPePAylEkp.xml  BK8PXvqBkYwFwmtix2Az3XWhy0Yd.xml  BK8PXvqBkYwFwmtix2Az3XWhy0Yp.xml  HDPVFNJRP3m5K5R7zdTcW55Ow6kd.xml  HDPVFNJRP3m5K5R7zdTcW55Ow6kp.xml  KTrheyekJwumxZPM9cbfKc5XIq4p.xml  RDqP8mUiopvS6_wV-WT-B8WKvWUp.xml  S_FWHaNBWAaNlmCPJgqBhKQGsfAp.xml  YpVOf_tIgxbKZnGorJg1-yso1RMd.xml  YpVOf_tIgxbKZnGorJg1-yso1RMp.xml  YqR1r7lsNPCpAFRSzkAKzBpgrs4p.xml  _36wktscUBY1DqapGJuS1C47dXMd.xml  _36wktscUBY1DqapGJuS1C47dXMp.xml  aYQhYUEKwgIIRXSuPBvLRaIm3e0d.xml  aYQhYUEKwgIIRXSuPBvLRaIm3e0p.xml  jzwUwDLFHgeyq4pSdxtaPKcqN0Ed.xml  jzwUwDLFHgeyq4pSdxtaPKcqN0Ep.xml  qtF-txHXl_SiiM03Xbm7t-tCSw8p.xml  rSUlOpQ6NdHWOfAOf0nGf09Q1vgp.xml  rVV6SVP6TSyY4EquFYhv0wanLe4d.xml  rVV6SVP6TSyY4EquFYhv0wanLe4p.xml  wqWoD_9D7UpcMCzCFwORL2rdeEAd.xml  wqWoD_9D7UpcMCzCFwORL2rdeEAp.xml  yKp75QBGpGuCWKMtFY-y23zcWUsp.xml
resources/project/HoHDHQ_WvHAAKj5aJOrvrg_vpt8/: xXlmKuOQ7YT_G1elNhbKQIUqSRMd.xml
resources/project/JTV7N4nzD7jvyyhS69bQS70U2-Q/: 6OUjTqDal3PzrKrA61U0QjDpvu0p.xml  fSiiOAKO0Pw0iOXxMhdTGnV7L18p.xml
resources/project/KAXfQgCar2Yb8zOxgvf9hdmLP1E/: AHAxoW31usLwMDHAVrRGXtQFU3Ad.xml  AHAxoW31usLwMDHAVrRGXtQFU3Ap.xml
resources/project/LUgSFhI3RPozNzNcutxrczVe6f0/: zysj6jqndh8PiG0peMTf8Kuy-1gd.xml  zysj6jqndh8PiG0peMTf8Kuy-1gp.xml
resources/project/OGosmLMaQOg0mL0zNprg1pOEUjA/: OTmJI3M3N-B55aKIKcc9GBMOEpEp.xml  Wv-xwvYb23N0u3FiUIa--r5I9sgp.xml  ZOLFdVoWrarvk4CUloAtSBnm1Mcp.xml  eX7uRdETnDymTnyjxnjZw2Ou39wp.xml  m43O-eeHZ_-8CoPCQuwlmJFtGCkp.xml  (+2 more)
ros/src/franka_controllers/: CMakeLists.txt  franka_controllers_plugin.xml  package.xml
ros/src/franka_controllers/config/: controller_parameters.yaml
ros/src/franka_controllers/include/LCQP_controller/: FrankaModel.hpp  LCQP_controller.hpp
ros/src/franka_controllers/include/franka_controllers/: LCQP_controller_frankaModel.hpp  LCQP_controller_multipleObstacle.hpp  LCQP_controller_quickconcept.hpp  joint_position_controller.hpp
ros/src/franka_controllers/launch/: LCQP_controller_frankaModel_run.launch  LCQP_controller_multipleObstacle.launch  controller_sim.launch  franka_with_marker.rviz  franka_with_obstacles.rviz  franka_with_obstacles_LCQP_controller_quickconcept.rviz  joint_position_controller_run.launch
ros/src/franka_controllers/scripts/: interactive_marker.py
ros/src/franka_controllers/src/: FrankaModel.cpp  LCQP_controller.cpp  LCQP_controller_frankaModel.cpp  LCQP_controller_multipleObstacle.cpp  LCQP_controller_quickconcept.cpp  joint_position_controller.cpp
(+23 files in other folders)
